syntax = "proto3";

option go_package = "pkg/papers";

enum LicenseType {
  LICENSE_UNSPECIFIED = 0;
  LICENSE_CC_BY = 1;
  LICENSE_CC_BY_NC_ND = 2;
  LICENSE_CC_BY_NC = 3;
  LICENCE_ARXIV = 4;
  LICENSE_CC_BY_NC_SA = 5;
  LICENSE_CC_BY_SA = 6;
  LICENSE_CC0 = 7;
  LICENSE_ELSEVIER_SPECIFIC_OA_USER_LICENSE = 8;
  LICENSE_IMPLIED_OA = 9;
  LICENSE_PUBLIC_DOMAIN = 10;
  LICENSE_NO_CC_CODE = 11;
  LICENSE_CC_BY_ND = 12;
  LICENSE_PUBLISHER_SPECIFIC_LICENSE = 13;
  LICENSE_PUBLISHER_SPECIFIC_AUTHOR_MANUSCRIPT = 14;
  LICENSE_ACS_SPECIFIC_CHOICE_USAGE_AGREEMENT = 15;
  LICENSE_OPEN_GOVERNMENT_LICENSE_CANADA = 16;
}

enum ResourceType {
  RESOURCE_UNSPECIFIED = 0;
  RESOURCE_JSON = 1;
  RESOURCE_PDF = 2;
  RESOURCE_LATEX = 3;
  RESOURCE_XML = 4;
}

message PaperId {
  int64 id = 1; // json = "id"

  string doi = 2;

  string arxiv = 3;
  string pm_id = 4 [json_name = "pmid"];
  string pmc_id = 5 [json_name = "pmcid"];
  string istex_id = 6 [json_name = "istexId"];

  repeated ResourceType resources = 7; // json = "resources"
  LicenseType license = 8; // json = "license"
  string oa_link = 9;
}
